unpackaged/main/default/objects/Ignition_ProCount_Integration_Settings__mdt/Ignition_ProCount_Integration_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Ignition / ProCount Integration Settings</label>
    <pluralLabel>Ignition / ProCount Integration Settings</pluralLabel>
</CustomObject>