unpackaged/main/default/objects/Ignition_ProCount_Integration_Settings__mdt/fields/Delete_Downtime_Logs_after_x_days__c.field-meta.xml
<CustomField>
    <fullName>Delete_Downtime_Logs_after_x_days__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Delete Downtime Logs after x days. Optional enter the number of days to keep downtime logs. Records will be deleted after this number of days based on last modified date. 0 or less disables the job</inlineHelpText>
    <label>Delete_Downtime_Logs_after_x_days</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>