unpackaged/main/default/objects/Ignition_ProCount_Integration_Settings__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to enable the Integration jobs to run.</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>