unpackaged/main/default/objects/Ignition_ProCount_Integration_Settings__mdt/fields/Ignition_ProCount_Send_Errors_to_Email__c.field-meta.xml
<CustomField>
    <fullName>Ignition_ProCount_Send_Errors_to_Email__c</fullName>
    <inlineHelpText>Enter an email to send errors that occur</inlineHelpText>
    <label>Ignition_ProCount_Send_Errors_to_Email</label>
    <type>Email</type>
</CustomField>