unpackaged/main/default/objects/Ignition_ProCount_Integration_Settings__mdt/fields/ProCount_File_Name__c.field-meta.xml
<CustomField>
    <fullName>ProCount_File_Name__c</fullName>
    <inlineHelpText>Enter the name of the file ProCount example: ProCount.csv</inlineHelpText>
    <label>ProCount_File_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>