unpackaged/main/default/objects/Ignition_ProCount_Integration_Settings__mdt/fields/REST_FTP_api_Key__c.field-meta.xml
<CustomField>
    <fullName>REST_FTP_api_Key__c</fullName>
    <inlineHelpText>Enter the value to communicate with the Heroku app</inlineHelpText>
    <label>REST_FTP_api_Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>