unpackaged/main/default/objects/Ignition_ProCount_Integration_Settings__mdt/fields/REST_FTP_Ignition_Download_Path__c.field-meta.xml
<CustomField>
    <fullName>REST_FTP_Ignition_Download_Path__c</fullName>
    <inlineHelpText>Enter the ftp path to pickup Ignition files</inlineHelpText>
    <label>REST_FTP_Ignition_Download_Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>