unpackaged/main/default/objects/Ignition_ProCount_Integration_Settings__mdt/fields/REST_FTP_server__c.field-meta.xml
<CustomField>
    <fullName>REST_FTP_server__c</fullName>
    <inlineHelpText>Enter the ftp server address</inlineHelpText>
    <label>REST_FTP_server</label>
    <length>255</length>
    <type>Text</type>
</CustomField>