unpackaged/main/default/objects/Ignition_ProCount_Integration_Settings__mdt/fields/REST_FTP_server_password__c.field-meta.xml
<CustomField>
    <fullName>REST_FTP_server_password__c</fullName>
    <inlineHelpText>Enter ftp password</inlineHelpText>
    <label>REST_FTP_server_password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>