unpackaged/main/default/objects/Ignition_ProCount_Integration_Settings__mdt/fields/REST_FTP_server_port__c.field-meta.xml
<CustomField>
    <fullName>REST_FTP_server_port__c</fullName>
    <inlineHelpText>Enter the ftp server port</inlineHelpText>
    <label>REST_FTP_server_port</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>