unpackaged/main/default/objects/Ignition_ProCount_Integration_Settings__mdt/fields/REST_FTP_server_username__c.field-meta.xml
<CustomField>
    <fullName>REST_FTP_server_username__c</fullName>
    <inlineHelpText>enter the ftp username</inlineHelpText>
    <label>REST_FTP_server_username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>