unpackaged/main/default/objects/Ignition_ProCount_Integration_Settings__mdt/fields/REST_FTP_server_useTLS__c.field-meta.xml
<CustomField>
    <fullName>REST_FTP_server_useTLS__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>check to use tls communication on the ftp</inlineHelpText>
    <label>REST_FTP_server_useTLS</label>
    <type>Checkbox</type>
</CustomField>