unpackaged/main/default/objects/Ignition_ProCount_Integration_Settings__mdt/fields/REST_FTP_URL__c.field-meta.xml
<CustomField>
    <fullName>REST_FTP_URL__c</fullName>
    <inlineHelpText>Enter the URL from the Heroku app used to talk to a ftp server</inlineHelpText>
    <label>REST_FTP_URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>